# Ai-chatbot-fullstack

./: .gitignore  README.md  cmd.md  install.sh  postman.json  requirements.txt  routes.md
ai-service/: cmd.md  requirements.txt
ai-service/app/: main.py
api-gateway/: .env.example  .gitignore  cmd.txt  package.json  tsconfig.json
api-gateway/src/: app.ts  server.ts  websocket.ts
app/api/: chat.py
app/core/: config.py
app/services/: ollama_service.py
backend/: .gitignore
backend/ai-service/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  start_ollama.sh
backend/ai-service/app/: main.py
backend/ai-service/app/api/: auth.py  chat.py
backend/ai-service/app/api/v1/: router.py
backend/ai-service/app/api/v1/endpoints/: ai.py  health.py
backend/ai-service/app/core/: config.py  logging.py
backend/ai-service/app/grpc/: handler.py  server.py
backend/ai-service/app/models/: request.py  response.py
backend/ai-service/app/services/: ai_service.py  ollama_service.py  rag_service.py
backend/ai-service/app/utils/: cache.py
backend/api-gateway/: .env.example  .gitignore  cmd.txt  package.json  tsconfig.json
backend/chat-service/: .env.example  .gitignore  Dockerfile  Makefile  go.mod
backend/user-service/: .gitignore  Dockerfile  Makefile  go.mod
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
user-service/: .gitignore  go.mod
user-service/migrations/: 001_create_users_table.sql  002_create_preferences_table.sql  (+1 more)
(+94 files in other folders)
