[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio-mqtt==0.13.0",
    "elasticsearch==8.11.0",
    "fastapi==0.104.1",
    "grpcio==1.60.0",
    "grpcio-reflection==1.60.0",
    "grpcio-tools==1.60.0",
    "httpx==0.25.2",
    "huggingface-hub==0.34.4",
    "langchain==0.1.0",
    "langchain-community==0.0.10",
    "ollama==0.1.7",
    "protobuf==4.25.1",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "redis==5.0.1",
    "sentence-transformers==5.1.0",
    "structlog==23.2.0",
    "uvicorn==0.24.0",
]
